Fix draw-on-visible costs componenets

--- a/source/stylesheets/components/charts/_all.sass
+++ b/source/stylesheets/components/charts/_all.sass
@@ -86,7 +86,7 @@ h2, .title
   top: 50%
   left: 0
   color: #fff
-  width: 150px
+  width: 120px
   padding-right: 1em
   font-weight: normal
   font-size: 1em
